WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201668
REGRESSION (iOS 13): Top fixed element on apple.com flickers in size while pinching in
https://bugs.webkit.org/show_bug.cgi?id=201668
Summary
REGRESSION (iOS 13): Top fixed element on apple.com flickers in size while pi...
Simon Fraser (smfr)
Reported
2019-09-10 17:46:23 PDT
REREGRESSION (iOS 13): Top fixed element on apple.com flickers in size while pinching in
Attachments
Patch
(3.53 KB, patch)
2019-09-10 18:15 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(3.52 KB, patch)
2019-09-10 18:17 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(11.05 KB, patch)
2019-09-11 17:45 PDT
,
Simon Fraser (smfr)
fred.wang
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-09-10 18:15:38 PDT
Created
attachment 378523
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-09-10 18:15:40 PDT
<
rdar://problem/51934041
>
Simon Fraser (smfr)
Comment 3
2019-09-10 18:17:00 PDT
Created
attachment 378524
[details]
Patch
Antti Koivisto
Comment 4
2019-09-10 22:30:31 PDT
Comment on
attachment 378524
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=378524&action=review
> Source/WebCore/ChangeLog:15 > + With this change ScrollingTreeFrameScrollingNode no longer needs m_behaviorForFixed; it can be removed layer.
'later'.
Simon Fraser (smfr)
Comment 5
2019-09-11 15:26:34 PDT
Comment on
attachment 378524
[details]
Patch Actually this makes some interactions worse.
Simon Fraser (smfr)
Comment 6
2019-09-11 17:45:31 PDT
Created
attachment 378605
[details]
Patch
Frédéric Wang Nélar
Comment 7
2019-09-11 21:38:41 PDT
Comment on
attachment 378605
[details]
Patch LGTM
Simon Fraser (smfr)
Comment 8
2019-09-12 13:19:13 PDT
https://trac.webkit.org/changeset/249815/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug